changed the url

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <a href="https://reaktiiv.com/projects.json"> <button> Vaata lähemalt </button></a>
+    <a href="https://praktika.reaktiiv.ee/projects.json"> <button> Vaata lähemalt </button></a>
 
     <table id="myTable" class="display" style="width:100%">
         <thead>
